--- a/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
+++ b/zest_station/partials_v2/pickupKey/zsPickupKeyDispense.html
@@ -131,7 +131,7 @@
         <div id="room" ng-show="zestStationData.show_room_number">
             <span class="number">{{selectedReservation.room}}</span>
         </div>
-        <button type="button" class="button" click-touch="clickedOnCloseButton()" ng-style="doneButtonStyle">
+        <button type="button" class="button" click-touch="pickupKeyNextPageAction()" ng-style="doneButtonStyle">
             <text editable-text="DONE"> {{'DONE' |translate}}</text>
         </button>
     </div>
@@ -159,6 +159,19 @@
                     </h1>
                 </li>
                 <li class="break">
+                    <span>
+                        <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
+                    </span>
+                </li>
+                <li ng-if="zestStationData.pickup_key_reg_print === 'auto_print'"> 
+                    <button type="button" class="button option" click-touch="onKeyFailureGoToPrintPage()">
+                        <div ng-include="icons.url.keyboard"></div>
+                    </button>
+                    <h1>
+                        <text editable-text="CONTINUE"> {{'CONTINUE' |translate}}</text>
+                    </h1>
+                </li>
+                <li class="break" ng-if="zestStationData.pickup_key_reg_print === 'auto_print'">
                     <span>
                         <text editable-text="OR_TEXT"> {{'OR_TEXT' |translate}}</text>
                     </span>
