CICO-37026 fixes issue with not showing out of service sub header text

--- a/zest_station/partials_v2/zsOutOfService.html
+++ b/zest_station/partials_v2/zsOutOfService.html
@@ -8,7 +8,9 @@
         <h1>
         	<text editable-text="OOS_HEADER"> {{'OOS_HEADER' |translate}}</text>
     	</h1>
-        <h2>{{oos_message_value}}</h2>
+        <h2>
+        	<text editable-text="OOS_SUB"> {{'OOS_SUB' |translate}}</text>
+        </h2>
     </div>
 <span ng-include="'/assets/partials_v2/zsTabletFooter.html'" ></span>
 </section>
