--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -6,51 +6,54 @@
         <!-- <h3>Subheading text here</h3> -->
         <form method="post" class="form">
 
-            <div class="entry select select-with-button input" ng-class="{'autocomplete-border':showingAutoCompleteArea == true}">
+            <div class="entry input select-with-button " ng-class="{'autocomplete-border':showingAutoCompleteArea == true}">
                 <!--input type='text' id='country-selector'-->
 
                 <select
+                ng-if="!zestStationData.kiosk_enforce_country_sort"
                 focus-on='input'
                 focus-on-trigger='showingAutoComplete'
                 id='country-selector' 
-                class="turn-to-ac select" 
+                class="turn-to-ac select nat-select" 
                 name="Country" 
                 autocorrect="off" 
                 autocomplete="off"
                 ng-options="country.id as country.value for country in countryList" 
                 ng-model="selectedCountry.id" 
-                ng-keydown='showingAutoComplete()'
-                ng-if="!zestStationData.kiosk_enforce_country_sort">
+                ng-keydown='showingAutoComplete()'>
                     <option style="display:none" value="" class=""></option>
                 </select>
 
                 <!-- sorted -->
 
                 <select 
+                ng-if="zestStationData.kiosk_enforce_country_sort"
                 focus-on='input'
                 focus-on-trigger='showingAutoComplete'
                 id='country-selector' 
-                class="turn-to-ac select" 
+                class="turn-to-ac select nat-select" 
                 name="Country" 
                 autocorrect="off" 
                 autocomplete="off"
-                ng-model="selectedCountry.id" 
-                ng-if="zestStationData.kiosk_enforce_country_sort">
+                ng-model="selectedCountry.id" >
                     <option value="">{{SELECT_COUNTRY}}</option><!-- TODO need to have this translatable -->
                     <option ng-repeat="country in sortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                     <option value="" ng-show="sortedCountries.length > 0" disabled> ------------------ </option>
                     <option ng-repeat="country in unSortedCountries" value="{{country.id}}" ng-selected="country.id==countrySelected"> {{country.name}} </option>
                 </select>
+
             </div>
 
-            <div ng-if="zestStationData.theme === 'yotel'" ng-include="icons.url.clear_icon" click-touch="clearNationality()"></div>
+            <div ng-if="zestStationData.theme === 'yotel'" class='clear-nationality-btn' ng-include="icons.url.clear_icon" click-touch="clearNationality()"></div>
 
-            <div class="action">
-                <button type="button" class="button left-aligned-next" ng-click="saveNationality()">
+            <div class="entry action">
+                <button type="button" class="button save-nationality-btn" ng-click="saveNationality()">
                     <text editable-text="NEXT_BTN"> {{'NEXT_BTN' |translate}}</text>
                 </button>
             </div>
+
         </form>
+
     </div>
     <span ng-include="'/assets/partials_v2/zsTabletFooter.html'"></span>
 </section>
