--- a/zest_station/partials_v2/checkin/zsCollectNationality.html
+++ b/zest_station/partials_v2/checkin/zsCollectNationality.html
@@ -14,7 +14,7 @@
                 focus-on='input'
                 focus-on-trigger='showingAutoComplete'
                 id='country-selector' 
-                class="turn-to-ac select nat-select" 
+                class="turn-to-ac select" 
                 name="Country" 
                 autocorrect="off" 
                 autocomplete="off"
@@ -31,7 +31,7 @@
                 focus-on='input'
                 focus-on-trigger='showingAutoComplete'
                 id='country-selector' 
-                class="turn-to-ac select nat-select" 
+                class="turn-to-ac select" 
                 name="Country" 
                 autocorrect="off" 
                 autocomplete="off"
