--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -6,7 +6,7 @@
         </h1>
         <ul id="selection" class="editable">
             <li ng-repeat='room in upsellRooms track by $index'>
-                <span class="details">{{room.upgrade_room_type_name}}</span>
+                <span class="details">{{room.upgrade_room_number}} {{room.upgrade_room_type_name}}</span>
                 <button type="button" class="button" click-touch='viewSelectedRoomDetails(room)'>View Details</button>
             </li>
         </ul>
