CICO-37260 registartion card fixing with translation file

--- a/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRegCardDeliveryOptions.html
@@ -172,7 +172,7 @@
                 </span>
                 <br><br><br>
 
-                <span class="reg_text">{{printRegCardData.reg_card_text}}</span>
+                <span class="reg-text" translate>REGISTRATION_READY_PRINT_MSG_1</span>
                 <br><br><br>
 
                 <strong class='footer large_txt'>
