--- a/zest_station/partials_v2/pickupKey/zsPickupKeyRegistartionCardPrint.html
+++ b/zest_station/partials_v2/pickupKey/zsPickupKeyRegistartionCardPrint.html
@@ -85,7 +85,7 @@
             <br>
             <br>
             <br>
-            <span class="reg_text">{{printRegCardData.reg_card_text}}</span>
+            <span class="reg-text" translate>REGISTRATION_READY_PRINT_MSG_1</span>
             <br>
             <br>
             <br>
