ows message flow change

--- a/zest_station/partials_v2/checkin/zsOwsMsgsPresent.html
+++ b/zest_station/partials_v2/checkin/zsOwsMsgsPresent.html
@@ -28,7 +28,7 @@
         <button type="button" class="button" touch-press="viewMessages()">
             <text editable-text="VIEW_OWS_MSG_AGAIN"> {{'VIEW_OWS_MSG_AGAIN' |translate}}</text>
         </button>
-        <button type="button" class="button" touch-press="navToHome()">
+        <button type="button" class="button" touch-press="nextPageActions()">
             <text editable-text="OWS_MSG_DONE"> {{'OWS_MSG_DONE' |translate}}</text>
         </button>
     </div>
