--- a/zest_station/partials_v2/checkin/zsCheckinFinal.html
+++ b/zest_station/partials_v2/checkin/zsCheckinFinal.html
@@ -38,6 +38,6 @@
         </h3>
 
 
-        <button type="button" class="button" click-touch='checkinFinalDoneAction()' translate>CHECKIN_DONE_BTN</button>
+        <button type="button" class="button" click-touch='navToHome()' translate>CHECKIN_DONE_BTN</button>
     </div>
 </section>
