--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -1,5 +1,5 @@
 <!-- Content -->
-<section id="main" role="main" click-touch='resetTime()'>
+<section id="main" role="main" click-touch='resetTime()' ng-class="{'centered':displayMode === 'ERROR_MODE'}">
     <div id="content" ng-show="displayMode === 'ROOM_UPSELL_LIST'">
         <h1><text editable-text="ROOM_UPGRADE_HEADER"> {{'ROOM_UPGRADE_HEADER' |translate}}</text></h1>
         <h3><text editable-text="ROOM_UPGRADE_LIST_SUB_HEADER"> {{'ROOM_UPGRADE_LIST_SUB_HEADER' |translate}}</text></h3>
@@ -64,14 +64,14 @@
             </button>
         </div>
     </div>
-    <div id="content" class='add-guest-mode-content' ng-show="displayMode === 'ERROR_MODE'">
+    <div id="content" ng-show="displayMode === 'ERROR_MODE'">
         <h1>
             <text editable-text="ROOM_UPGRADE_ERROR"> {{'ROOM_UPGRADE_ERROR' |translate}}</text>
         </h1>
         <h2>
            <text editable-text="ROOM_UPGRADE_ERROR_SUB"> {{'ROOM_UPGRADE_ERROR_SUB' |translate}}</text>
         </h2>
-        <button type="button" click-touch="skipRoomUpsell()">
+        <button type="button" class="button" click-touch="skipRoomUpsell()">
             <text editable-text="ROOM_UPGRADE_ERROR_CONTINUE"> {{'ROOM_UPGRADE_ERROR_CONTINUE' |translate}}</text>
         </button>
     </div>
