CICO-36588 sorting upsell

--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -5,7 +5,7 @@
         <h3><text editable-text="ROOM_UPGRADE_LIST_SUB_HEADER"> {{'ROOM_UPGRADE_LIST_SUB_HEADER' |translate}}</text></h3>
         <!--Layout V4: add  .upgrade-list-v2 -->
         <ul class="upgrade-list" ng-class="{'upgrade-list-v2' :  zestStationData.room_upsell_style === 'STYLE_B'}">
-            <li ng-repeat='room in viewableRoomUpgrades track by $index'>
+            <li ng-repeat='room in viewableRoomUpgrades | orderBy:upsellOrderByProperty'>
                 <div class="upgrade-picture">
                     <img src="{{room.room_type_image}}">
                 </div>
