CICO-37345 adding spacing

--- a/zest_station/partials_v2/checkin/zsOwsMsgsPresent.html
+++ b/zest_station/partials_v2/checkin/zsOwsMsgsPresent.html
@@ -7,9 +7,7 @@
             <text editable-text="SINGLE_MESSAGE_SUB_HEADER"> {{'SINGLE_MESSAGE_SUB_HEADER' |translate}}</text>
         </h2>
         <h2 ng-show="owsMessages.length !== 1 ">
-            <text editable-text="MULTIPLE_MESSAGE_SUB_HEADER_PART_1"> {{'MULTIPLE_MESSAGE_SUB_HEADER_PART_1' |translate}}</text>
-            {{owsMessages.length}}
-            <text editable-text="MULTIPLE_MESSAGE_SUB_HEADER_PART_2"> {{'MULTIPLE_MESSAGE_SUB_HEADER_PART_2' |translate}}</text>
+            <text editable-text="MULTIPLE_MESSAGE_SUB_HEADER_PART_1"> {{'MULTIPLE_MESSAGE_SUB_HEADER_PART_1' |translate}}</text>&nbsp;{{owsMessages.length}}&nbsp;<text editable-text="MULTIPLE_MESSAGE_SUB_HEADER_PART_2"> {{'MULTIPLE_MESSAGE_SUB_HEADER_PART_2' |translate}}</text>
 
         </h2>
         <!-- General error -->
