--- a/zest_station/partials_v2/checkin/zsCheckinSuccess.html
+++ b/zest_station/partials_v2/checkin/zsCheckinSuccess.html
@@ -1,7 +1,7 @@
 <section id="main" role="main" class="centered" click-touch='resetTime()'>
     <div id="content">
         <h1>
-        	<text editable-text="CHECKIN_SUCCESS_HEADER"> {{'CHECKIN_SUCCESS_HEADER' |translate}}</text>&nbsp;{{user_name}}<text editable-text="CHECKIN_SUCCESS_HEADER_ENDING"> {{'CHECKIN_SUCCESS_HEADER_ENDING' |translate}}</text>
+        	<text editable-text="CHECKIN_SUCCESS_HEADER"> {{'CHECKIN_SUCCESS_HEADER' |translate}}</text>&nbsp;{{user_name}}&nbsp;<text editable-text="CHECKIN_SUCCESS_HEADER_ENDING">{{'CHECKIN_SUCCESS_HEADER_ENDING' |translate}}</text>
     	</h1>
         <h3>
         	<text editable-text="CHECKIN_SUCCESS_SUB_HEADER"> {{'CHECKIN_SUCCESS_SUB_HEADER' |translate}}</text>
