CICO-36888 cleanup and fix final screen editor tags for editor mode

--- a/zest_station/partials_v2/checkin/zsCheckinFinal.html
+++ b/zest_station/partials_v2/checkin/zsCheckinFinal.html
@@ -38,6 +38,8 @@
         </h3>
 
 
-        <button type="button" class="button" click-touch='navToHome()' translate>CHECKIN_DONE_BTN</button>
+        <button type="button" class="button" click-touch='navToHome()'>
+            <text editable-text="CHECKIN_DONE_BTN"> {{'CHECKIN_DONE_BTN' |translate}}</text>
+        </button>
     </div>
 </section>
