CICO-36888 adds skipECI flag to selectedReservation to track and don't re-route back into ECI after room upsell

--- a/zest_station/partials_v2/checkin/zsCheckinSuccess.html
+++ b/zest_station/partials_v2/checkin/zsCheckinSuccess.html
@@ -7,7 +7,7 @@
         	<text editable-text="CHECKIN_SUCCESS_SUB_HEADER"> {{'CHECKIN_SUCCESS_SUB_HEADER' |translate}}</text>
         </h3>
 
-        <button type="button" class="button" click-touch='checkinFinalDoneAction()' translate>
+        <button type="button" class="button" click-touch='checkinFinalDoneAction()'>
             <text editable-text="CHECKIN_SUCCESS_DONE_BTN">{{'CHECKIN_SUCCESS_DONE_BTN' | translate}}</text>
         </button>
     </div>
