--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -1,6 +1,6 @@
 <!-- Content -->
-<section id="main" role="main" click-touch='resetTime()' ng-class="{'centered':displayMode === 'ERROR_MODE'}">
-    <div id="content" ng-show="displayMode === 'ROOM_UPSELL_LIST'">
+<section id="main" role="main" click-touch='resetTime()' ng-class="{'centered':mode === 'ERROR_MODE'}">
+    <div id="content" ng-show="mode === 'ROOM_UPSELL_LIST'">
         <h1><text editable-text="ROOM_UPGRADE_HEADER"> {{'ROOM_UPGRADE_HEADER' |translate}}</text></h1>
         <h3><text editable-text="ROOM_UPGRADE_LIST_SUB_HEADER"> {{'ROOM_UPGRADE_LIST_SUB_HEADER' |translate}}</text></h3>
         <!--Layout V4: add  .upgrade-list-v2 -->
@@ -36,7 +36,7 @@
             </div>
         </div>
     </div>
-    <div id="content" ng-show="displayMode === 'ROOM_DETAILS'">
+    <div id="content" ng-show="mode === 'ROOM_DETAILS'">
         <h1><text editable-text="ROOM_UPGRADE_HEADER"> {{'ROOM_UPGRADE_HEADER' |translate}}</text></h1>
         <div id="upgrade" class="tabled-options">
             <div class="upgrade-picture">
@@ -64,7 +64,7 @@
             </button>
         </div>
     </div>
-    <div id="content" ng-show="displayMode === 'ERROR_MODE'">
+    <div id="content" ng-show="mode === 'ERROR_MODE'">
         <h1>
             <text editable-text="ROOM_UPGRADE_ERROR"> {{'ROOM_UPGRADE_ERROR' |translate}}</text>
         </h1>
