--- a/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
+++ b/zest_station/partials_v2/checkin/zsCheckInAddRemoveGuest.html
@@ -17,20 +17,19 @@
     </div>
     <div id="content" class="input-field-contents" ng-show="AddGuestMode">
 
-        <h1 ng-show='mode === ENTER_FIRST'>
+        <h1 ng-show='mode === "ENTER_FIRST"'>
             <text editable-text="ENTER_FIRST"> {{'ENTER_FIRST' |translate}}</text>
         </h1>
-        <h3 ng-show='mode === ENTER_FIRST'>
+        <h3 ng-show='mode === "ENTER_FIRST"'>
             <text editable-text="ENTER_FIRST_SUB"> {{'ENTER_FIRST_SUB' |translate}}</text>
         </h3>
 
-        <h1 ng-show='mode === ENTER_LAST'>
+        <h1 ng-show='mode === "ENTER_LAST"'>
             <text editable-text="ENTER_LAST"> {{'ENTER_LAST' |translate}}</text>
         </h1>
-        <h3 ng-show='mode === ENTER_LAST'>
+        <h3 ng-show='mode === "ENTER_LAST"'>
             <text editable-text="ENTER_LAST_SUB"> {{'ENTER_LAST_SUB' |translate}}</text>
         </h3>
-
 
         <form class="form" click-touch='resetTime()'>
             <div class="entry input">
