CICO-36588 big screen fix

--- a/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
+++ b/zest_station/partials_v2/checkin/zsCheckinRoomUpsell.html
@@ -21,7 +21,7 @@
                 </div>
             </li>
         </ul>
-        <div id="actions" class="upgrades-list-actions">
+        <div id="actions">
             <button type="button" class="button transparent" click-touch="skipRoomUpsell()">
                 <text editable-text="ROOM_UPGRADE_SKIP"> {{'ROOM_UPGRADE_SKIP' |translate}}</text>
             </button>
