CICO-37335 fixes checkout Keycard icon

--- a/zest_station/partials_v2/checkout/zsCheckoutKeyCardActions.html
+++ b/zest_station/partials_v2/checkout/zsCheckoutKeyCardActions.html
@@ -20,7 +20,7 @@
             <ul role="menu">
                 <li>
                     <button type="button" class="button option">
-                        <div ng-include="icons.url.creditcard"></div>
+                        <div ng-include="icons.url.key"></div>
                     </button>
                     <text editable-text="INSERT_KEY_CARD"> {{'INSERT_KEY_CARD' |translate}}</text>
                 </li>
@@ -39,7 +39,7 @@
             <ul role="menu">
                 <li>
                     <button type="button" class="button option" touch-press='retrySearch()'>
-                        <div ng-include="icons.url.creditcard"></div>
+                        <div ng-include="icons.url.key"></div>
                     </button>
                     <text editable-text="RETRY"> {{'RETRY' |translate}}</text>
                 </li>
