CICO-37661 updates text for labels per jeff

--- a/zest_station/partials_v2/zsJumpList.html
+++ b/zest_station/partials_v2/zsJumpList.html
@@ -28,7 +28,11 @@
 <div ng-repeat='view in jumpList' class='jumper-box-li'>
     <ul ng-show='showJumperItem(view)'>
         <li click-touch='jumpTo(view, false)'>
-            <img ng-show='jumpGalleryOn && view.icon' ng-onError='{{setGalleryIconInvalid(view.icon)}' class='jump-icon' ng-src="{{jumpGalleryIconPath}}{{view.icon}}" ng-class='{"hide-invalid-icon" : galleryIconInvalid(view.icon)}'>
+            <img ng-show='jumpGalleryOn && view.icon' 
+                ng-onError='{{setGalleryIconInvalid(view.icon)}' 
+                class='jump-icon' 
+                ng-src="{{jumpGalleryIconPath}}{{view.icon}}" 
+                ng-class='{"hide-invalid-icon" : galleryIconInvalid(view.icon)}'>
             <!--img ng-show='jumpGalleryOn' src="'/assets/zest_station/css/themes/yotel/gallery/'+{{}}"-->
             <!-- clickable if [no modes] -->
             <h3 ng-show='!view.modes'>{{view.label}}</h3>
@@ -47,7 +51,11 @@
     <ul ng-show='view.modes' ng-repeat='mode in view.modes'>
         <li ng-show='showJumperItem(mode)' class='view-mode' click-touch='jumpTo(view, true, mode.name)'>
             
-            <img ng-show='jumpGalleryOn && mode.icon' ng-onError='{{setGalleryIconInvalid(mode.icon)}}' class='jump-icon' ng-src="{{jumpGalleryIconPath}}{{mode.icon}}" ng-class='{"hide-invalid-icon" : galleryIconInvalid(mode.icon)}'>
+            <img ng-show='jumpGalleryOn && mode.icon' 
+                ng-onError='{{setGalleryIconInvalid(mode.icon)}}' 
+                class='jump-icon' 
+                ng-src="{{jumpGalleryIconPath}}{{mode.icon}}" 
+                ng-class='{"hide-invalid-icon" : galleryIconInvalid(mode.icon)}'>
             <!-- clickable [modes] -->
             <h3>{{mode.label}}</h3>
             <p>
