CICO-37985 Admin Light speed restaurant company dropdown fix

--- a/admin/directives/selectBox/adDropdownboxName.html
+++ b/admin/directives/selectBox/adDropdownboxName.html
@@ -5,6 +5,7 @@
 
     <div class='select'>
         <select ng-class="{'placeholder': ngModel == ''}"
+                ng-attr-convert-to-number="{{bindNumber}}"
                 id="{{id}}"
                 name="{{name}}"
                 class="{{selboxClass}}"
